@@ -1,5 +1,6 @@
 package io.github.nhtuan10.modular.impl.module;
 
+import io.github.nhtuan10.modular.api.classloader.ModularClassLoader;
 import io.github.nhtuan10.modular.api.exception.AnnotationProcessingRuntimeException;
 import io.github.nhtuan10.modular.api.exception.DuplicatedModuleLoadRuntimeException;
 import io.github.nhtuan10.modular.api.exception.ModuleLoadRuntimeException;
@@ -9,14 +10,17 @@ import io.github.nhtuan10.modular.api.module.ExternalContainer;
 import io.github.nhtuan10.modular.api.module.ModuleLoadConfiguration;
 import io.github.nhtuan10.modular.api.module.ModuleLoader;
 import io.github.nhtuan10.modular.impl.annotation.ModularAnnotationProcessor;
+import io.github.nhtuan10.modular.impl.classloader.DefaultModularClassLoader;
 import io.github.nhtuan10.modular.impl.classloader.MavenArtifactsResolver;
 import io.github.nhtuan10.modular.impl.model.ModularServiceHolder;
-import io.github.nhtuan10.modular.impl.proxy.ProxyCreator;
-import io.github.nhtuan10.modular.impl.serdeserializer.JacksonSmileSerDeserializer;
+import io.github.nhtuan10.modular.impl.proxy.ServiceProxyCreator;
 import io.github.nhtuan10.modular.impl.serdeserializer.JavaSerDeserializer;
 import io.github.nhtuan10.modular.impl.serdeserializer.KryoSerDeserializer;
 import io.github.nhtuan10.modular.impl.serdeserializer.SerDeserializer;
+import lombok.EqualsAndHashCode;
+import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
+import lombok.ToString;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 
@@ -31,9 +35,10 @@ import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CountDownLatch;
+import java.util.stream.Collectors;
 
 @Slf4j
-public class ModuleLoaderImpl implements ModuleLoader {
+public class DefaultModuleLoader implements ModuleLoader {
     public static final String APPLICATION_CONTEXT_PROVIDER = "io.github.nhtuan10.modular.spring.ApplicationContextProvider";
     public static final String PROXY_TARGET_FIELD_NAME = "target";
 
@@ -46,28 +51,35 @@ public class ModuleLoaderImpl implements ModuleLoader {
     final ModuleLoaderConfiguration configuration;
     private volatile static ModuleLoader instance;
     private static final Object lock = new Object();
+    final Map<String, ModularClassLoader> modulerClassLoaderMap = new ConcurrentHashMap<>();
+    final ThreadLocal<String> currentModuleNameThreadLocal = new ThreadLocal<>();
 
     public static ModuleLoader getInstance() {
-        return ModuleLoaderImpl.getInstance(ModuleLoaderConfiguration.DEFAULT);
+        return DefaultModuleLoader.getInstance(ModuleLoaderConfiguration.DEFAULT);
     }
-
 
     public static ModuleLoader getInstance(ModuleLoaderConfiguration configuration) {
         if (instance == null) {
             synchronized (lock) {
                 if (instance == null) {
-                    instance = new ModuleLoaderImpl(configuration);
+                    instance = new DefaultModuleLoader(configuration);
                 }
             }
         }
         return instance;
     }
 
-    public ModuleLoaderImpl(ModuleLoaderConfiguration configuration) {
-        serDeserializer = switch (configuration.getSerializeType()) {
-            case JAVA -> new JavaSerDeserializer();
-            case JACKSON_SMILE -> new JacksonSmileSerDeserializer();
-            case KRYO -> new KryoSerDeserializer();
+    public DefaultModuleLoader(ModuleLoaderConfiguration configuration) {
+        switch (configuration.getSerializeType()) {
+            case JAVA:
+                serDeserializer = new JavaSerDeserializer();
+                break;
+//            case JACKSON_SMILE -> new JacksonSmileSerDeserializer();
+            case KRYO:
+            default:
+                serDeserializer = new KryoSerDeserializer();
+                break;
+
         };
         this.configuration = configuration;
     }
@@ -89,17 +101,17 @@ public class ModuleLoaderImpl implements ModuleLoader {
                         if (path.toFile().exists()) {
                             urls.add(uri.toURL());
                         } else {
-                            throw new ModuleLoadRuntimeException(name, "Error loading module %s. File %s does not exist".formatted(name, path));
+                            throw new ModuleLoadRuntimeException(name, String.format("Error loading module %s. File %s does not exist", name, path));
                         }
                     } catch (MalformedURLException e) {
-                        throw new ModuleLoadRuntimeException(name, "Error loading module %s from file %s with package %s".formatted(name, uri, moduleLoadConfiguration.packagesToScan()), e);
+                        throw new ModuleLoadRuntimeException(name, String.format("Error loading module %s from file %s with package %s", name, uri, moduleLoadConfiguration.packagesToScan()), e);
                     }
                     break;
                 case HTTP:
                     try {
                         urls.add(uri.toURL());
                     } catch (MalformedURLException e) {
-                        throw new ModuleLoadRuntimeException(name, "Error loading module %s from file %s with package %s".formatted(name, uri, moduleLoadConfiguration.packagesToScan()), e);
+                        throw new ModuleLoadRuntimeException(name, String.format("Error loading module %s from file %s with package %s", name, uri, moduleLoadConfiguration.packagesToScan()), e);
                     }
                     break;
                 default:
@@ -114,23 +126,35 @@ public class ModuleLoaderImpl implements ModuleLoader {
 
     private List<URL> resolveMavenDeps(String moduleName, List<URI> uris) {
         // Load module from Maven
-        List<String> mvnArtifacts = uris.stream().map(uri -> uri.getHost() + uri.getPath().replace("/", ":")).toList();
+        List<String> mvnArtifacts = uris.stream().map(uri -> uri.getHost() + uri.getPath().replace("/", ":")).collect(Collectors.toList());
         log.info("Loading module {} from Maven artifacts: {}", moduleName, mvnArtifacts);
         return new MavenArtifactsResolver<URL>().resolveDependencies(mvnArtifacts, URL.class);
     }
 
-    private void loadModuleFromUrls(String name, ModuleLoadConfiguration moduleLoadConfiguration, List<URL> depUrls) {
-        ModularClassLoader moduleClassLoader = new ModularClassLoader(name, depUrls);
-        ModuleDetail moduleDetail = moduleDetailMap.get(name);
+    private void loadModuleFromUrls(String moduleName, ModuleLoadConfiguration moduleLoadConfiguration, List<URL> depUrls) {
+        currentModuleNameThreadLocal.set(moduleName);
+        ModularClassLoader moduleClassLoader;
+        String classLoaderNameFromConfig = moduleLoadConfiguration.modularClassLoaderName();
+        if (StringUtils.isNotBlank(classLoaderNameFromConfig)) {
+            moduleClassLoader = modulerClassLoaderMap.computeIfAbsent(classLoaderNameFromConfig, classLoaderName -> new DefaultModularClassLoader(classLoaderNameFromConfig, List.of(moduleName), moduleLoadConfiguration.prefixesLoadedBySystemClassLoader()));
+            moduleClassLoader.addClassPathUrls(depUrls);
+            moduleClassLoader.addModule(moduleName);
+        } else if (moduleLoadConfiguration.modularClassLoader() != null) {
+            moduleClassLoader = moduleLoadConfiguration.modularClassLoader();
+        } else {
+            moduleClassLoader = new DefaultModularClassLoader(List.of(moduleName), depUrls, moduleLoadConfiguration.prefixesLoadedBySystemClassLoader());
+            modulerClassLoaderMap.put(moduleName, moduleClassLoader);
+        }
+        ModuleDetail moduleDetail = moduleDetailMap.get(moduleName);
         moduleDetail.setClassLoader(moduleClassLoader);
 //        addAllOpens(ModuleLoaderImpl.class.getClassLoader());
 //        addAllOpens(moduleClassLoader);
         ModularAnnotationProcessor m = new ModularAnnotationProcessor(moduleClassLoader);
         try {
-            Map<Class<?>, Collection<ModularServiceHolder>> modularServices = m.annotationProcess(name, moduleLoadConfiguration);
+            Map<Class<?>, Collection<ModularServiceHolder>> modularServices = m.annotationProcess(moduleName, moduleLoadConfiguration);
             addModularServices(modularServices);
         } catch (Exception e) {
-            throw new AnnotationProcessingRuntimeException(name, "Fail during annotation processing", e);
+            throw new AnnotationProcessingRuntimeException(moduleName, "Fail during annotation processing", e);
         }
     }
 
@@ -174,8 +198,33 @@ public class ModuleLoaderImpl implements ModuleLoader {
     }
 
     @Override
+    public <I> List<I> getModularServices(Class<I> clazz, String moduleName) {
+        return getModularServices(clazz, moduleName, null, null, true);
+    }
+
+    @Override
     public <I> List<I> getModularServices(Class<I> clazz, boolean copyTransClassLoaderObjects) {
         return getModularServices(clazz, null, null, copyTransClassLoaderObjects);
+    }
+
+    @Override
+    public <I> List<I> getModularServices(String name, Class<I> clazz, ExternalContainer externalContainer) {
+        return getModularServices(clazz, null, externalContainer, name, true);
+    }
+
+    @Override
+    public <I> List<I> getModularServices(String name, Class<I> clazz, String moduleName, ExternalContainer externalContainer) {
+        return getModularServices(clazz, moduleName, externalContainer, name, true);
+    }
+
+    @Override
+    public <I> List<I> getModularServices(String name, Class<I> clazz, String moduleName, ExternalContainer externalContainer, boolean copyTransClassLoaderObjects) {
+        return getModularServices(clazz, moduleName, externalContainer, name, copyTransClassLoaderObjects);
+    }
+
+    @Override
+    public <I> List<I> getModularServicesFromSpring(String name, Class<I> clazz, String moduleName) {
+        return getModularServices(clazz, ExternalContainer.SPRING, name, false);
     }
 
     @Override
@@ -189,6 +238,10 @@ public class ModuleLoaderImpl implements ModuleLoader {
     }
 
     public <I> List<I> getModularServices(Class<I> apiClass, ExternalContainer externalContainer, String beanName, boolean copyTransClassLoaderObjects) {
+        return getModularServices(apiClass, null, externalContainer, beanName, copyTransClassLoaderObjects);
+    }
+
+    <I> List<I> getModularServices(Class<I> apiClass, String moduleName, ExternalContainer externalContainer, String beanName, boolean copyTransClassLoaderObjects) {
         //TODO: need to refactor this code to support another DI or external container rather than Spring
         Collection<ModularServiceHolder> serviceHolders = loadedModularServices2.get(apiClass.getName());
         if (serviceHolders != null) {
@@ -197,7 +250,7 @@ public class ModuleLoaderImpl implements ModuleLoader {
 //            List<I> proxyObjects = (List<I>) loadedProxyObjects.computeIfAbsent(new ProxyCacheKey(apiClass, externalContainer, beanName), proxyCacheKey -> {
 //                Class<?> clazz = proxyCacheKey.apiClass();
             @SuppressWarnings("unchecked")
-            List<I> proxyObjects = (List<I>) serviceHolders.stream().map(serviceHolder -> {
+            List<I> proxyObjects = (List<I>) serviceHolders.stream().filter(sh -> (moduleName == null || sh.getModuleName().equals(moduleName))).map(serviceHolder -> {
                 try {
                     if (serviceHolder.getExternalContainer() != externalContainer) { // continue
                         return null;
@@ -226,7 +279,7 @@ public class ModuleLoaderImpl implements ModuleLoader {
                                 service = serviceAppContextProvide.getMethod("getBean", String.class).invoke(null, serviceHolder.getExternalBeanName());
                             }
                         } catch (Exception ex) {
-                            throw new ServiceLookUpRuntimeException("Error when getModularServices from Spring Application Context for class %s with name %s".formatted(apiClass.getName(), beanName), ex);
+                            throw new ServiceLookUpRuntimeException(String.format("Error when getModularServices from Spring Application Context for class %s with name %s", apiClass.getName(), beanName), ex);
                         }
                         serviceHolder.setExternalBeanName(beanName);
                         serviceHolder.setServiceClass(service.getClass());
@@ -239,27 +292,41 @@ public class ModuleLoaderImpl implements ModuleLoader {
                     if (service != null) {
                         return loadedProxyObjects.computeIfAbsent(new ProxyCacheKey(apiClass, service), proxyCacheKey -> {
                             try {
-                                return ProxyCreator.createProxyObject(apiClass, service, this.serDeserializer, copyTransClassLoaderObjects, apiClass.getClassLoader(), serviceHolder.getClassLoader());
+                                return ServiceProxyCreator.createProxyObject(apiClass, service, this.serDeserializer, copyTransClassLoaderObjects, apiClass.getClassLoader(), serviceHolder.getClassLoader());
                             } catch (InstantiationException | IllegalAccessException | InvocationTargetException |
                                      NoSuchMethodException | ClassNotFoundException | NoSuchFieldException e) {
-                                throw new ServiceLookUpRuntimeException("Error when getModularServices for class %s".formatted(apiClass.getName()), e);
+                                throw new ServiceLookUpRuntimeException(String.format("Error when getModularServices for class %s", apiClass.getName()), e);
                             }
                         });
                     } else
                         return null;
                 } catch (
                         ClassNotFoundException e) {
-                    throw new ServiceLookUpRuntimeException("Error when getModularServices for class %s".formatted(apiClass.getName()), e);
+                    throw new ServiceLookUpRuntimeException(String.format("Error when getModularServices for class %s", apiClass.getName()), e);
                 }
-            }).filter(Objects::nonNull).toList();
+            }).filter(Objects::nonNull).collect(Collectors.toList());
 //            };
             return proxyObjects;
         } else {
-            throw new ServiceLookUpRuntimeException("Class '%s' is not registered as a Modular service. Please make sure this class is in the scanned packages and have @ModularService annotation".formatted(apiClass.getName()));
+            throw new ServiceLookUpRuntimeException(String.format("Class '%s' is not registered as a Modular service. Please make sure this class is in the scanned packages and have @ModularService annotation", apiClass.getName()));
         }
     }
 
-    public static record ProxyCacheKey(Class<?> apiClass, Object service) {
+    @RequiredArgsConstructor
+    @EqualsAndHashCode
+    @ToString
+    public static final class ProxyCacheKey {
+        private final Class<?> apiClass;
+        private final Object service;
+
+        public Class<?> apiClass() {
+            return apiClass;
+        }
+
+        public Object service() {
+            return service;
+        }
+
     }
 
     private CompletableFuture<ModuleDetail> startModule(String moduleName, List<String> locationUris, ExternalContainer externalContainer, String mainClass, List<String> packagesToScan, boolean awaitMainClass) {
@@ -299,7 +366,7 @@ public class ModuleLoaderImpl implements ModuleLoader {
                             }
                         } catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException |
                                  ClassNotFoundException | InterruptedException e) {
-                            ModuleLoadRuntimeException exception = new ModuleLoadRuntimeException(moduleName, "Error starting module '%s'".formatted(moduleName), e);
+                            ModuleLoadRuntimeException exception = new ModuleLoadRuntimeException(moduleName, String.format("Error starting module '%s'", moduleName), e);
                             moduleDetailCompletableFuture.completeExceptionally(exception);
                             notifyModuleReady(moduleName);
                             throw exception;
@@ -388,12 +455,17 @@ public class ModuleLoaderImpl implements ModuleLoader {
         return false;
     }
 
+    @Override
+    public String getCurrentModuleName() {
+        return currentModuleNameThreadLocal.get();
+    }
+
     private ModuleDetail awaitModuleReady(String moduleName, CompletableFuture<ModuleDetail> cf) {
         ModuleDetail moduleDetail = moduleDetailMap.get(moduleName);
         try {
             moduleDetail.getReadyLatch().await();
         } catch (InterruptedException e) {
-            throw new RuntimeException("Interrupted while waiting for module %s ready".formatted(moduleName), e);
+            throw new ModuleLoadRuntimeException(String.format("Interrupted while waiting for module %s ready", moduleName), e);
         }
         if (cf.isCompletedExceptionally()) {
             moduleDetail.setLoadStatus(LoadStatus.FAILED);
@@ -412,11 +484,15 @@ public class ModuleLoaderImpl implements ModuleLoader {
 
     public void notifyModuleReady(String moduleName) {
         ModuleDetail moduleDetail = moduleDetailMap.get(moduleName);
-        CountDownLatch readyLatch = moduleDetail.getReadyLatch();
-        if (readyLatch != null && readyLatch.getCount() > 0) {
-            readyLatch.countDown();
+        if (moduleDetail != null) {
+            CountDownLatch readyLatch = moduleDetail.getReadyLatch();
+            if (readyLatch != null && readyLatch.getCount() > 0) {
+                readyLatch.countDown();
+            }
+            moduleDetail.setLoadStatus(LoadStatus.LOADED);
+        } else {
+            throw new ModuleLoadRuntimeException("Module " + moduleName + " not found");
         }
-        moduleDetail.setLoadStatus(LoadStatus.LOADED);
     }
 
 
